add own graph processor and filter AIS

--- a/src/main/app-resources/notebook/libexec/input.ipynb
+++ b/src/main/app-resources/notebook/libexec/input.ipynb
@@ -219,7 +219,6 @@
     "\n",
     "import sys\n",
     "import os\n",
-    "from py_snap_helpers import op_help, get_operator_default_parameters, GraphProcessor\n",
     "\n",
     "import cioppy\n",
     "\n",
@@ -242,6 +241,165 @@
    "metadata": {},
    "source": [
     "#### Methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import lxml.etree as etree\n",
+    "import subprocess\n",
+    "import tempfile\n",
+    "import time\n",
+    "import psutil\n",
+    "from snappy import jpy\n",
+    "from snappy import ProductIO\n",
+    "from snappy import GPF\n",
+    "from snappy import HashMap\n",
+    "\n",
+    "\n",
+    "class GraphProcessor():\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.root = etree.Element('graph')\n",
+    "    \n",
+    "        version = etree.SubElement(self.root, 'version')\n",
+    "        version.text = '1.0'\n",
+    "        self.pid = None\n",
+    "        self.p = None\n",
+    "   \n",
+    "    def view_graph(self):\n",
+    "        \n",
+    "        print etree.tostring(self.root , pretty_print=True)\n",
+    "        \n",
+    "    def add_node(self, node_id, operator, parameters, source):\n",
+    "    \n",
+    "        xpath_expr = '/graph/node[@id=\"%s\"]' % node_id\n",
+    "\n",
+    "        if len(self.root.xpath(xpath_expr)) != 0:\n",
+    "\n",
+    "            node_elem = self.root.xpath(xpath_expr)[0]\n",
+    "            operator_elem = self.root.xpath(xpath_expr + '/operator')[0]\n",
+    "            sources_elem = self.root.xpath(xpath_expr + '/sources')[0]\n",
+    "            parameters_elem = self.root.xpath(xpath_expr + '/parameters')\n",
+    "\n",
+    "            for key, value in parameters.iteritems():\n",
+    "                p_elem = self.root.xpath(xpath_expr + '/parameters/%s' % key)[0]\n",
+    "                p_elem.text = value\n",
+    "        else:\n",
+    "\n",
+    "            node_elem = etree.SubElement(self.root, 'node')\n",
+    "            operator_elem = etree.SubElement(node_elem, 'operator')\n",
+    "            sources_elem = etree.SubElement(node_elem, 'sources')\n",
+    "\n",
+    "            if isinstance(source, list):\n",
+    "\n",
+    "                for index, s in enumerate(source):\n",
+    "                    if index == 0:  \n",
+    "                        source_product_elem = etree.SubElement(sources_elem, 'sourceProduct')\n",
+    "\n",
+    "                    else: \n",
+    "                        source_product_elem = etree.SubElement(sources_elem, 'sourceProduct.%s' % str(index))\n",
+    "\n",
+    "                    source_product_elem.attrib['refid'] = s\n",
+    "\n",
+    "            elif source != '':\n",
+    "                source_product_elem = etree.SubElement(sources_elem, 'sourceProduct')\n",
+    "                source_product_elem.attrib['refid'] = source\n",
+    "\n",
+    "            parameters_elem = etree.SubElement(node_elem, 'parameters')\n",
+    "            parameters_elem.attrib['class'] = 'com.bc.ceres.binding.dom.XppDomElement'\n",
+    "\n",
+    "            for key, value in parameters.iteritems():\n",
+    "\n",
+    "                parameter_elem = etree.SubElement(parameters_elem, key)\n",
+    "                parameter_elem.text = value\n",
+    "\n",
+    "        node_elem.attrib['id'] = node_id\n",
+    "\n",
+    "        operator_elem.text = operator \n",
+    "\n",
+    "    def save_graph(self, filename):\n",
+    "        \n",
+    "        with open(filename, 'wb') as file:\n",
+    "            file.write('<?xml version=\"1.0\" encoding=\"UTF-8\"?>\\n')\n",
+    "            file.write(etree.tostring(self.root, pretty_print=True))\n",
+    "     \n",
+    "    def plot_graph(self):\n",
+    "        \n",
+    "        for node_id in self.root.xpath('/graph/node/@id'):\n",
+    "            \n",
+    "\n",
+    "            xpath_expr = '/graph/node[@id=\"%s\"]' % node_id\n",
+    "            \n",
+    "            if len(self.root.xpath(xpath_expr + '/sources/sourceProduct')) != 0:\n",
+    "                print(self.root.xpath(xpath_expr + '/sources/sourceProduct'))[0].attrib['refid']\n",
+    "                print node_id\n",
+    "            else:\n",
+    "                print node_id\n",
+    "        return True\n",
+    "    \n",
+    "    def run(self):\n",
+    "        \n",
+    "        fd, path = tempfile.mkstemp()\n",
+    "        \n",
+    "        try:\n",
+    "        \n",
+    "            self.save_graph(filename=path)\n",
+    "            \n",
+    "            options = ['/opt/snap6/bin/gpt',\n",
+    "               '-x',\n",
+    "               '-c',\n",
+    "               '2048M',\n",
+    "               path]\n",
+    "            \n",
+    "            options = ['/workspace/temp/temp/snap6/snap6/bin/gpt',\n",
+    "               '-x',\n",
+    "               '-c',\n",
+    "               '2048M',\n",
+    "               path]\n",
+    "\n",
+    "            p = subprocess.Popen(options,\n",
+    "                stdout=subprocess.PIPE, stdin=subprocess.PIPE, stderr=subprocess.PIPE)\n",
+    "\n",
+    "            print p.pid\n",
+    "            res, err = p.communicate()\n",
+    "            print res, err\n",
+    "            if p.returncode != 0:\n",
+    "                raise Exception('An error occurred during the execution of gpt (see log)')\n",
+    "            \n",
+    "        except Exception as e:\n",
+    "            with open('stdout.txt', 'wb') as file:\n",
+    "                file.write(res)\n",
+    "                file.close()\n",
+    "            with open('stderr.txt', 'wb') as file:\n",
+    "                file.write(err)\n",
+    "                file.close()\n",
+    "            \n",
+    "            raise\n",
+    "        finally:\n",
+    "            os.remove(path)\n",
+    "            \n",
+    "            \n",
+    "def get_operator_default_parameters(operator):\n",
+    "    \n",
+    "    op_spi = GPF.getDefaultInstance().getOperatorSpiRegistry().getOperatorSpi(operator)\n",
+    "\n",
+    "    op_params = op_spi.getOperatorDescriptor().getParameterDescriptors()\n",
+    "\n",
+    "    #return op_params\n",
+    "\n",
+    "    parameters = dict()\n",
+    "\n",
+    "    for param in op_params:\n",
+    "    \n",
+    "        #print(param.getName(), param.getDefaultValue())\n",
+    "    \n",
+    "        parameters[param.getName()] = param.getDefaultValue()\n",
+    "        \n",
+    "    return parameters\n"
    ]
   },
   {
@@ -507,6 +665,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# to pd dataframe\n",
     "shipdetections_raw = pd.read_csv(shipdetections_path,sep='\\t', skiprows=[0])\n",
     "shipdetections_raw.head()"
    ]
@@ -516,7 +675,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# clean and add geometry\n",
+    "shipdetections_gdf = gpd.GeoDataFrame(shipdetections_raw[['ShipDetections', 'Detected_width:Double', 'Detected_length:Double']], geometry=gpd.points_from_xy(shipdetections_raw['Detected_lon:Double'], shipdetections_raw['Detected_lat:Double']), crs=\"EPSG:4326\")\n",
+    "\n",
+    "shipdetections_gdf.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shipdetections_gdf.to_file(\"result2.shp\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -544,8 +717,14 @@
     "ais_df = pd.read_csv(ais_data, decimal=\",\", usecols=['MMSI', 'IMO', 'STATUS', 'SPEED(KNOTS x10)', 'LON', 'LAT',\n",
     "                                                     'COURSE', 'HEADING', 'TIMESTAMP(UTC)'],\n",
     "                     dtype={'LON': float, 'LAT': float})\n",
+    "\n",
+    "ais_df['TIMESTAMP(UTC)'] = pd.to_datetime(ais_df['TIMESTAMP(UTC)'])\n",
+    "\n",
     "print('Number of rows in %s: %d' % (ais_data.split('\\\\')[-1], len(ais_df.index)))\n",
     "\n",
+    "\n",
+    "\n",
+    "# add geometry\n",
     "ais_gdf = gpd.GeoDataFrame(ais_df, geometry=gpd.points_from_xy(ais_df.LON, ais_df.LAT), crs=\"EPSG:4326\")\n",
     "ais_gdf.head()"
    ]
@@ -555,9 +734,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "\n",
-    "AOI = shapely.wkt.loads('POLYGON ((-29.97968971227660973 39.49718800212976078, -26.71593511606884519 39.49718800212976078, -26.75288328130893234 37.42809074868483776, -29.99200576735664114 37.46503891392492847, -29.97968971227660973 39.49718800212976078))')"
+    "# filter by AOI\n",
+    "AOI = shapely.wkt.loads('POLYGON ((-29.97968971227660973 39.49718800212976078, -26.71593511606884519 39.49718800212976078, -26.75288328130893234 37.42809074868483776, -29.99200576735664114 37.46503891392492847, -29.97968971227660973 39.49718800212976078))')\n",
+    "ais_gdf_aoi = ais_gdf[ais_gdf['geometry'].within(AOI)]\n",
+    "ais_gdf_aoi.head()"
    ]
   },
   {
@@ -566,8 +754,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ais_gdf_aoi = ais_gdf[ais_gdf['geometry'].within(AOI)]\n",
-    "ais_gdf_aoi.head()"
+    "# filter in time\n",
+    "ais_gdf_aoi = ais_gdf_aoi[(ais_gdf_aoi['TIMESTAMP(UTC)'] > '2017-07-3 19:40:00') & (ais_gdf_aoi['TIMESTAMP(UTC)'] < '2017-07-3 19:50:00')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(ais_gdf_aoi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# first way\n",
+    "sorted = ais_gdf_aoi.sort_values(['MMSI', 'TIMESTAMP(UTC)'], ascending = [True, False])\n",
+    "\n",
+    "first = sorted.groupby('MMSI').first().reset_index()\n",
+    "\n",
+    "res = gpd.GeoDataFrame(first)\n",
+    "\n",
+    "res.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res.to_file(\"ais.shp\")"
    ]
   },
   {
