--- a/src/main/app-resources/notebook/libexec/input.ipynb
+++ b/src/main/app-resources/notebook/libexec/input.ipynb
@@ -233,7 +233,20 @@
     "import pandas as pd\n",
     "import geopandas as gpd\n",
     "\n",
-    "import shapely.wkt"
+    "import cioppy\n",
+    "ciop = cioppy.Cioppy()\n",
+    "\n",
+    "import shapely.wkt\n",
+    "\n",
+    "import lxml.etree as etree\n",
+    "import subprocess\n",
+    "import tempfile\n",
+    "import time\n",
+    "import psutil\n",
+    "from snappy import jpy\n",
+    "from snappy import ProductIO\n",
+    "from snappy import GPF\n",
+    "from snappy import HashMap"
    ]
   },
   {
@@ -249,16 +262,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import lxml.etree as etree\n",
-    "import subprocess\n",
-    "import tempfile\n",
-    "import time\n",
-    "import psutil\n",
-    "from snappy import jpy\n",
-    "from snappy import ProductIO\n",
-    "from snappy import GPF\n",
-    "from snappy import HashMap\n",
-    "\n",
     "\n",
     "class GraphProcessor():\n",
     "    \n",
@@ -450,7 +453,26 @@
     "    \n",
     "    mygraph.view_graph()\n",
     "    \n",
-    "    mygraph.run()"
+    "    mygraph.run()\n",
+    "    \n",
+    "def get_input_metadata (input_refs):\n",
+    "    \n",
+    "    # for each product get metadata\n",
+    "    Result_Prod = []\n",
+    "    \n",
+    "    for index,product_ref in enumerate(input_refs):\n",
+    "        \n",
+    "        # since the search is by identifier \n",
+    "        Result_Prod.append(ciop.search(end_point = product_ref,params =[],output_fields='self,identifier,startdate,enclosure,title,startdate,enddate,wkt')[0] )\n",
+    "    \n",
+    "\n",
+    "    input_metadata = pd.DataFrame.from_dict(Result_Prod)\n",
+    "\n",
+    "    input_metadata['startdate'] = pd.to_datetime(input_metadata['startdate'])\n",
+    "    input_metadata['enddate'] = pd.to_datetime(input_metadata['enddate'])\n",
+    "    \n",
+    "    \n",
+    "    return input_metadata\n"
    ]
   },
   {
@@ -458,6 +480,15 @@
    "metadata": {},
    "source": [
     "#### Aux folders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "etc_path = \"/application/notebook/etc\""
    ]
   },
   {
@@ -484,6 +515,23 @@
     "        \n",
     "if not os.path.isdir(temp_folder):\n",
     "    os.mkdir(temp_folder)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Get S-1 Metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_metadata = get_input_metadata(input_references)\n",
+    "input_metadata"
    ]
   },
   {
@@ -704,8 +752,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ais_data = '/workspace/Better_3rd_phase/Applications/EXT-03-02-01/ewf-ext-03-02-01/src/main/app-resources/notebook/etc/ais_2017_07.csv'"
+    "ais_rel_path = 'ais_2017_07.csv'\n",
+    "ais_data = os.path.join(etc_path, ais_rel_path)\n",
+    "    \n",
+    "if not(os.path.isfile(ais_data)): # when running locally\n",
+    "    ais_data = os.path.join(os.path.dirname(os.getcwd()), 'etc', ais_rel_path)\n",
+    "        \n",
+    "print(os.path.isfile(ais_data), ais_data)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ais_data = '/workspace/Better_3rd_phase/Applications/EXT-03-02-01/ewf-ext-03-02-01/src/main/app-resources/notebook/etc/ais_2017_07.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -743,7 +813,8 @@
    "outputs": [],
    "source": [
     "# filter by AOI\n",
-    "AOI = shapely.wkt.loads('POLYGON ((-29.97968971227660973 39.49718800212976078, -26.71593511606884519 39.49718800212976078, -26.75288328130893234 37.42809074868483776, -29.99200576735664114 37.46503891392492847, -29.97968971227660973 39.49718800212976078))')\n",
+    "#AOI = shapely.wkt.loads('POLYGON ((-29.97968971227660973 39.49718800212976078, -26.71593511606884519 39.49718800212976078, -26.75288328130893234 37.42809074868483776, -29.99200576735664114 37.46503891392492847, -29.97968971227660973 39.49718800212976078))')\n",
+    "AOI = shapely.wkt.loads(input_metadata.iloc[0]['wkt'])\n",
     "ais_gdf_aoi = ais_gdf[ais_gdf['geometry'].within(AOI)]\n",
     "ais_gdf_aoi.head()"
    ]
@@ -755,7 +826,12 @@
    "outputs": [],
    "source": [
     "# filter in time\n",
-    "ais_gdf_aoi = ais_gdf_aoi[(ais_gdf_aoi['TIMESTAMP(UTC)'] > '2017-07-3 19:40:00') & (ais_gdf_aoi['TIMESTAMP(UTC)'] < '2017-07-3 19:50:00')]"
+    "min_date = input_metadata.iloc[0]['startdate'] - pd.Timedelta(minutes=10)\n",
+    "max_date = input_metadata.iloc[0]['enddate'] + pd.Timedelta(minutes=10)\n",
+    "print(min_date, max_date)\n",
+    "ais_gdf_aoi = ais_gdf_aoi[(ais_gdf_aoi['TIMESTAMP(UTC)'] > min_date) & (ais_gdf_aoi['TIMESTAMP(UTC)'] < max_date)]\n",
+    "\n",
+    "ais_gdf_aoi.head()"
    ]
   },
   {
