export shp files to zip file

--- a/src/main/app-resources/notebook/libexec/input.ipynb
+++ b/src/main/app-resources/notebook/libexec/input.ipynb
@@ -246,7 +246,10 @@
     "from snappy import jpy\n",
     "from snappy import ProductIO\n",
     "from snappy import GPF\n",
-    "from snappy import HashMap"
+    "from snappy import HashMap\n",
+    "\n",
+    "import zipfile\n",
+    "import glob"
    ]
   },
   {
@@ -463,7 +466,10 @@
     "    for index,product_ref in enumerate(input_refs):\n",
     "        \n",
     "        # since the search is by identifier \n",
-    "        Result_Prod.append(ciop.search(end_point = product_ref,params =[],output_fields='self,identifier,startdate,enclosure,title,startdate,enddate,wkt')[0] )\n",
+    "        Result_Prod.append(ciop.search(end_point = product_ref,\n",
+    "                                       params =[],\n",
+    "                                       output_fields='self,identifier,startdate,enclosure,title,startdate,enddate,track,swathIdentifier,wkt',\n",
+    "                                       model='EOP')[0] )\n",
     "    \n",
     "\n",
     "    input_metadata = pd.DataFrame.from_dict(Result_Prod)\n",
@@ -473,6 +479,19 @@
     "    \n",
     "    \n",
     "    return input_metadata\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_zip_file(files, output_path):\n",
+    "    with zipfile.ZipFile(output_path, 'w') as myzip:\n",
+    "        for file in files:\n",
+    "            myzip.write(file, arcname=os.path.basename(file))\n",
+    "    return output_path"
    ]
   },
   {
@@ -500,7 +519,8 @@
    "outputs": [],
    "source": [
     "output_folder = ''\n",
-    "temp_folder = 'temp'"
+    "temp_folder = 'temp'\n",
+    "shp_folder = 'shp'"
    ]
   },
   {
@@ -514,7 +534,10 @@
     "        os.mkdir(output_folder)\n",
     "        \n",
     "if not os.path.isdir(temp_folder):\n",
-    "    os.mkdir(temp_folder)"
+    "    os.mkdir(temp_folder)\n",
+    "\n",
+    "if not os.path.isdir(shp_folder):\n",
+    "    os.mkdir(shp_folder)"
    ]
   },
   {
@@ -736,7 +759,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shipdetections_gdf.to_file(\"result2.shp\")"
+    "shipdetections_gdf.to_file(os.path.join(shp_folder, 'shipdetections.shp'))"
    ]
   },
   {
@@ -854,7 +877,7 @@
     "\n",
     "first = sorted.groupby('MMSI').first().reset_index()\n",
     "\n",
-    "res = gpd.GeoDataFrame(first)\n",
+    "res = gpd.GeoDataFrame(first, crs=\"EPSG:4326\")\n",
     "\n",
     "res.head()"
    ]
@@ -874,7 +897,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res.to_file(\"ais.shp\")"
+    "res.to_file(os.path.join(shp_folder, 'ais.shp'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "track = input_metadata.iloc[0]['track']\n",
+    "startdatetime = input_metadata.iloc[0]['startdate'].strftime('%Y%m%dT%H%M')\n",
+    "\n",
+    "s1track = 'S1{0:03}'.format(int(track))\n",
+    "\n",
+    "output_name = '_'.join([s1track,'AIS', 'vesseldetection', startdatetime])\n",
+    "                        \n",
+    "output_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zip_list = glob.glob(shp_folder + '/*')\n",
+    "\n",
+    "create_zip_file(zip_list, output_name + '.zip') \n",
+    "\n",
+    "for file in zip_list:\n",
+    "    os.remove(file)"
    ]
   },
   {
@@ -890,8 +964,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shutil.rmtree(temp_folder)"
+    "#shutil.rmtree(temp_folder)\n",
+    "shutil.rmtree(shp_folder)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
