add properties file

--- a/src/main/app-resources/notebook/libexec/input.ipynb
+++ b/src/main/app-resources/notebook/libexec/input.ipynb
@@ -491,7 +491,16 @@
     "    with zipfile.ZipFile(output_path, 'w') as myzip:\n",
     "        for file in files:\n",
     "            myzip.write(file, arcname=os.path.basename(file))\n",
-    "    return output_path"
+    "    return output_path\n",
+    "\n",
+    "def write_properties_file(output_name, first_date, last_date, region_of_interest):\n",
+    "    \n",
+    "    title = 'Output %s' % output_name\n",
+    "    \n",
+    "    with open(output_name + '.properties', 'wb') as file:\n",
+    "        file.write('title=%s\\n' % title)\n",
+    "        file.write('date=%s/%s\\n' % (first_date, last_date))\n",
+    "        file.write('geometry=%s' % (region_of_interest))"
    ]
   },
   {
@@ -927,7 +936,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "area_wkt = input_metadata.iloc[0]['wkt']\n",
     "track = input_metadata.iloc[0]['track']\n",
+    "\n",
+    "startdate_iso = pd.to_datetime(input_metadata.iloc[0]['startdate']).strftime('%Y-%m-%dT%H:%M:%SZ')\n",
+    "enddate_iso = pd.to_datetime(input_metadata.iloc[0]['enddate']).strftime('%Y-%m-%dT%H:%M:%SZ')\n",
+    "\n",
     "startdatetime = input_metadata.iloc[0]['startdate'].strftime('%Y%m%dT%H%M')\n",
     "\n",
     "s1track = 'S1{0:03}'.format(int(track))\n",
@@ -945,10 +959,16 @@
    "source": [
     "zip_list = glob.glob(shp_folder + '/*')\n",
     "\n",
-    "create_zip_file(zip_list, output_name + '.zip') \n",
-    "\n",
-    "for file in zip_list:\n",
-    "    os.remove(file)"
+    "create_zip_file(zip_list, output_name + '.zip') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write_properties_file(output_name + '.zip', startdate_iso, enddate_iso, area_wkt)"
    ]
   },
   {
