--- a/src/main/app-resources/notebook/libexec/input.ipynb
+++ b/src/main/app-resources/notebook/libexec/input.ipynb
@@ -416,16 +416,11 @@
    },
    "outputs": [],
    "source": [
-    "def vessel_detection_processing(**kwargs):\n",
+    "\n",
+    "\n",
+    "def serial_processing(operators, **kwargs):\n",
     "   \n",
     "    options = dict()\n",
-    "    \n",
-    "    operators = ['Read',\n",
-    "                 'Land-Sea-Mask',\n",
-    "                 'Calibration',\n",
-    "                 'AdaptiveThresholding',\n",
-    "                 'Object-Discrimination',\n",
-    "                 'Write']\n",
     "    \n",
     "    for operator in operators:\n",
     "            \n",
@@ -691,6 +686,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Vessel detection"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -698,22 +700,23 @@
    },
    "outputs": [],
    "source": [
+    "operators = ['Read',\n",
+    "             'Land-Sea-Mask',\n",
+    "             'Calibration',\n",
+    "             'AdaptiveThresholding',\n",
+    "             'Object-Discrimination',\n",
+    "             'Write']\n",
+    "\n",
     "for r,w in zip(reads,writes):\n",
     "    \n",
-    "    vessel_detection_processing(Read=r,\n",
-    "                                Land_Sea_Mask=landseamask,\n",
-    "                                Calibration=calibration,\n",
-    "                                AdaptiveThresholding=adaptivethresholding,\n",
-    "                                Object_Discrimination=objectdiscrimination,\n",
-    "                                Write=w)\n"
+    "    serial_processing(operators,\n",
+    "                      Read=r,\n",
+    "                      Land_Sea_Mask=landseamask,\n",
+    "                      Calibration=calibration,\n",
+    "                      AdaptiveThresholding=adaptivethresholding,\n",
+    "                      Object_Discrimination=objectdiscrimination,\n",
+    "                      Write=w)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -910,24 +913,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Output"
+    "#### Output shp files"
    ]
   },
   {
@@ -972,6 +961,122 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Terrain-correction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "writes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reads = []\n",
+    "for e in writes:\n",
+    "    \n",
+    "    read = dict()\n",
+    " \n",
+    "    read['file'] =  e['file'] + '.dim'\n",
+    "    #read['formatName'] = 'Sen3_SLSTRL1B_500m'\n",
+    "    \n",
+    "    reads.append(read)\n",
+    "    \n",
+    "reads"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "terraincorrection = get_operator_default_parameters('Terrain-Correction')\n",
+    "\n",
+    "for p in terraincorrection:\n",
+    "    if p == 'nodataValueAtSea':\n",
+    "        terraincorrection[p] = 'false'\n",
+    "    elif p == 'sourceBandNames':\n",
+    "        terraincorrection[p] = 'Sigma0_VV'\n",
+    "\n",
+    "terraincorrection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "writes_tc = []\n",
+    "for index, row in input_metadata.iterrows():\n",
+    "    \n",
+    "    area_wkt = row['wkt']\n",
+    "    track = row['track']\n",
+    "\n",
+    "    startdate_iso = pd.to_datetime(im['startdate']).strftime('%Y-%m-%dT%H:%M:%SZ')\n",
+    "    enddate_iso = pd.to_datetime(im['enddate']).strftime('%Y-%m-%dT%H:%M:%SZ')\n",
+    "\n",
+    "    startdatetime = row['startdate'].strftime('%Y%m%dT%H%M')\n",
+    "\n",
+    "    s1track = 'S1{0:03}'.format(int(track))\n",
+    "\n",
+    "    output_name = '_'.join([s1track,'Sigma0VV', startdatetime])\n",
+    "                        \n",
+    "    #print(output_name)\n",
+    "    \n",
+    "    \n",
+    "    write = dict()\n",
+    "    \n",
+    "    output_path = output_name + '.tif'\n",
+    "    \n",
+    "    write['file'] = output_path\n",
+    "    write['formatName'] = 'GeoTIFF-BigTIFF'\n",
+    "\n",
+    "    writes_tc.append(write)\n",
+    "    \n",
+    "    # properties file\n",
+    "    write_properties_file(output_name + '.tif', startdate_iso, enddate_iso, area_wkt)\n",
+    "    \n",
+    "writes_tc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "operators = ['Read',\n",
+    "             'Terrain-Correction',\n",
+    "             'Write']\n",
+    "\n",
+    "for r,w in zip(reads,writes_tc):\n",
+    "    \n",
+    "    serial_processing(operators,\n",
+    "                      Read=r,\n",
+    "                      Terrain_Correction=terraincorrection,\n",
+    "                      Write=w)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -984,7 +1089,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#shutil.rmtree(temp_folder)\n",
+    "shutil.rmtree(temp_folder)\n",
     "shutil.rmtree(shp_folder)"
    ]
   },
