add timestamp to shps

--- a/src/main/app-resources/notebook/libexec/input.ipynb
+++ b/src/main/app-resources/notebook/libexec/input.ipynb
@@ -220,8 +220,6 @@
     "import sys\n",
     "import os\n",
     "\n",
-    "import cioppy\n",
-    "\n",
     "import numpy as np\n",
     "\n",
     "import gdal\n",
@@ -762,6 +760,8 @@
     "# clean and add geometry\n",
     "shipdetections_gdf = gpd.GeoDataFrame(shipdetections_raw[['ShipDetections', 'Detected_width:Double', 'Detected_length:Double']], geometry=gpd.points_from_xy(shipdetections_raw['Detected_lon:Double'], shipdetections_raw['Detected_lat:Double']), crs=\"EPSG:4326\")\n",
     "\n",
+    "shipdetections_gdf['TIMESTAMP(UTC)'] = input_metadata.iloc[0]['startdate'].strftime('%Y-%m-%d %H:%M:%S')\n",
+    "\n",
     "shipdetections_gdf.head()"
    ]
   },
@@ -909,6 +909,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "res['TIMESTAMP(UTC)'] = res['TIMESTAMP(UTC)'].dt.strftime('%Y-%m-%d %H:%M:%S')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export to shp\n",
     "res.to_file(os.path.join(shp_folder, 'ais.shp'))"
    ]
   },
@@ -1031,8 +1041,8 @@
     "    area_wkt = row['wkt']\n",
     "    track = row['track']\n",
     "\n",
-    "    startdate_iso = pd.to_datetime(im['startdate']).strftime('%Y-%m-%dT%H:%M:%SZ')\n",
-    "    enddate_iso = pd.to_datetime(im['enddate']).strftime('%Y-%m-%dT%H:%M:%SZ')\n",
+    "    startdate_iso = pd.to_datetime(row['startdate']).strftime('%Y-%m-%dT%H:%M:%SZ')\n",
+    "    enddate_iso = pd.to_datetime(row['enddate']).strftime('%Y-%m-%dT%H:%M:%SZ')\n",
     "\n",
     "    startdatetime = row['startdate'].strftime('%Y%m%dT%H%M')\n",
     "\n",
